--- a/style.css
+++ b/style.css
@@ -150,6 +150,7 @@ span
 {
     display: inline;
     margin-left: 15px;
+    
 }
 
 .panel-ops
@@ -174,6 +175,7 @@ span
     display: flex;
     justify-content: center;
     align-items: flex-end;
+    
 }
 
 .hero-msg
@@ -187,10 +189,11 @@ span
     font-size: 0.85rem;
     width: 80%;
     margin-bottom: 25px;
+    
 }
 
 .hero-msg a{
-    color: #007185;
+   color: #007185;
 }  
 
 /****/
@@ -200,10 +203,15 @@ span
     flex-wrap:wrap;
     justify-content: space-evenly;
     background-color:  #e2e7e6;
+    
+}
+.See-more
+{
+    color: #007185;
 }
 .box
 {
-    border: 0px solid black;
+    /*border: 0px solid black;*/
     height: 400px;
     width: 23%;
     background-color:white;
@@ -216,6 +224,7 @@ span
     height: 300px;
     background-size: cover;
     margin-top: 1rem;
+    margin-bottom: 1rem;
 }
 
 .box-content
